Sutter Health/src/objects/AQRS_Dynamic_Field__c.object
<CustomObject>
    <fields>
        <fullName>GICSelectedFields__c</fullName>
        <label>GICSelectedFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GICUnSelectedFields__c</fullName>
        <label>GICUnSelectedFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PVPSelectedFields__c</fullName>
        <label>PVPSelectedFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PVPUnSelectedFields__c</fullName>
        <label>PVPUnSelectedFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>AQRS Dynamic Fields</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AQRS Dynamic Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AQRS Dynamic Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>